--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
   
-  <title>React App</title>
+  <title>comfy couch</title>
 </head>
 
 <body>
